# dependencies

./: build  common.sh  functions.sh  setup_cmake_src
SWORD-1.1/: SWORDConfig.cmake  setup.sh  shared.sh
Z3-2.15/: Z3Config.cmake  setup.sh  shared.sh
Z3-2.18/: Z3Config.cmake  setup.sh
Z3-2.19/: Z3Config.cmake  setup.sh
Z3-3.2/: Z3Config.cmake  setup.sh
Z3-4.0/: Z3-4.x.inline.patch  Z3Config.cmake  setup.sh  shared.sh
Z3-4.1/: Z3Config.cmake  setup.sh
Z3-4.3.1/: setup.sh
Z3-4.3.1-unstable-cirkit/: Z3Config.cmake  setup.sh
Z3-4.4.1/: setup.sh
Z3-4.5.0/: setup.sh
Z3-4.5.0-ubuntu-14.04-x64/: Z3Config.cmake  setup.sh  shared.sh
Z3-4.5.0-ubuntu-14.04-x86/: setup.sh
Z3-4.5.0-x86-ubuntu-14.04-x64/: setup.sh  shared.sh
Z3-4.5.0-x86-ubuntu-14.04-x86/: setup.sh
Z3-4.8.4/: setup.sh
Z3-git/: setup.sh  shared.sh
aiger-20071012/: setup.sh
boolector-1.4/: 0001-moved-typedefs-Btor-and-BtorExp-to-seperate-header.patch  BoolectorConfig.cmake  CMakeLists.txt  picosat_include_path.patch  setup.sh  shared.sh
boolector-1.4.1/: 0003-added-option-to-change-the-function-called-on-error.patch  0004-added-ifdefs-to-handle-includes-of-from-C.patch  0014-workaround-on-shifting-conditions.patch  BoolectorConfig.cmake  BoolectorConfigVersion.cmake  CMakeLists.txt  setup.sh
boolector-1.5.115/: 0014-workaround-on-shifting-conditions.patch  BoolectorConfigVersion.cmake  CMakeLists.txt  array_read.patch  setup.sh  shared.sh
boolector-1.5.116/: setup.sh
boolector-1.5.118/: 0003-added-option-to-change-the-function-called-on-error.patch  minisat_include_path.patch  setup.sh
boolector-2.0/: CMakeLists.txt  lingeling_include_path.patch  setup.sh
boolector-2.0.6/: CMakeLists.txt  setup.sh  shared.sh
boolector-2.2.0/: CMakeLists.txt  lingeling_include_path.patch  setup.sh  shared.sh
boolector-2.2.0-minisat/: CMakeLists.txt  lingeling_include_path.patch  setup.sh
boolector-2.3.1/: 0014-workaround-on-shifting-conditions.patch  CMakeLists.txt  btorconfig.h.cmake  minisat_include.patch  setup.sh  shared.sh
boolector-2.4.1/: 0014-workaround-on-shifting-conditions.patch  btorconfig.h.cmake  lingeling_include_path.patch  setup.sh  shared.sh
boost-1_46_0/: setup.sh  shared.sh
boost-1_46_1/: setup.sh
boost-1_47_0/: setup.sh
boost-1_48_0/: setup.sh
boost-1_48_0-log/: setup.sh  shared-log.sh
boost-1_49_0/: setup.sh
boost-1_50_0/: setup.sh
boost-1_50_0-log/: setup.sh
boost-1_51_0/: setup.sh
boost-1_52_0/: setup.sh
boost-1_53_0/: setup.sh
boost-1_54_0/: setup.sh
boost-1_55_0/: setup.sh
boost-1_56_0/: setup.sh
boost-1_57_0/: setup.sh
boost-1_60_0-fs/: setup.sh
cmake-2.8.11.2/: setup.sh
cmake-2.8.4/: setup.sh
cmake-2.8.5/: setup.sh
cmake-2.8.7/: setup.sh
cmake-2.8.8/: setup.sh
cmake-2.8.9/: setup.sh
cmake-3.0.1/: setup.sh
cmake-3.1.3/: setup.sh
cmake-3.2.1/: setup.sh
cmake-3.2.2/: setup.sh
cryptominisat-git/: 0003-link-public-against-M4RI_LIBRARIES.patch  setup.sh
cudd-2.4.2/: CMakeLists.txt  setup.sh  shared.sh
cudd-2.4.2-git/: setup.sh  shared.sh
cudd-2.5.0/: CMakeLists.txt  setup.sh
cudd-3.0.0/: CMakeLists.txt  shared.sh
cvc4-1.4/: 0001-moved-Minisat-namespace-into-CVC4.patch  setup.sh  shared.sh
cvc4-1.5/: shared.sh
cvc4-1.5pre-smtcomp2016/: setup.sh
cvc4-unstable/: setup.sh
fmi-0.2/: setup.sh
gcc-4.8.1/: setup.sh  shared.sh
glog-git-0.3.3/: setup.sh
glog-svn/: setup.sh
gmp-5.0.5/: setup.sh
lingeling-587-9c0f11d-110302/: CMakeLists.txt  setup.sh
lingeling-ayv-86bf266-140429/: CMakeLists.txt  lglcflags.h.in.cmake  shared.sh
lingeling-bal-2293bef-151109/: CMakeLists.txt  setup.sh  shared.sh
lingeling-bal-2293bef-151129/: CMakeLists.txt  setup.sh  shared.sh
lingeling-bbc-9230380-161217/: CMakeLists.txt  lglcfg.h.in.cmake  setup.sh  shared.sh
llvm+clang-3.0/: setup.sh
llvm+clang-3.1/: setup.sh
m4ri-20140914/: setup.sh
minisat-2.2.0/: CMakeLists.txt  setup.sh
minisat-git/: CMakeLists.txt  MiniSatConfig.cmake  setup.sh  shared-git.sh
mpfr-3.1.2/: setup.sh  shared.sh
ninja-git/: setup.sh
ninja-release/: setup.sh
picosat-936/: CMakeLists.txt  setup.sh  shared.sh
puma-2.23/: setup.sh
stp-2.3.1-basic/: setup.sh
stp-git/: setup.sh
stp-svn/: STPConfig.cmake  added-pic-flags.patch  setup.sh
swig-2.0.2/: setup.sh
systemc-2.3/: SystemCConfig.cmake  setup.sh  shared.sh
systemc-2.3.0/: setup.sh
yices-2.4.2/: YicesConfig.cmake  setup.sh  shared.sh
yices-2.5.2/: setup.sh
yices-2.6.1/: setup.sh
zchaff-2007.3.12/: CMakeLists.txt  missing_includes.patch  setup.sh  shared.sh  zChaffConfig.cmake
